fix footer on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -438,6 +438,11 @@ a{
         padding-left: 10px;
     }
 
+    footer{
+        padding-right: 30px;
+        padding-left: 30px;
+    }
+
 }
 
 
